Published with https://stackedit.io/

--- a/文字识别初探.md
+++ b/文字识别初探.md
@@ -2,4 +2,33 @@
 title: 文字识别初探
 date: 2016-10-08 11:57:23
 tags:
+ - 文字识别
+ - tesseract
+ - OCR
+ - 开源
 ---
+
+随着中国互联网对广告的审核越来越严格，日常投放运营过程中，渠道对资质文件和创意的要求越来越高，如营业执照、身份证等。我们需要花费大量的人力成本对这些文件进行描述，如营业主题，姓名，生日等。有没有一种方案对文件进行快速的描述，减少人力成本？
+
+另一方面，这个需求是具有可扩展性的。
+
+
+因此对一些开源的框架以及开放的   API做基础调研。
+
+[Tesseract](https://github.com/tesseract-ocr/tesseract)
+&
+
+[tesseract-ocr/langdata](https://github.com/tesseract-ocr/langdata)
+[Chinese OCR](https://blog.philippklaus.de/2011/01/chinese-ocr/)
+[tesseract-ocr/wiki](https://github.com/tesseract-ocr/tesseract/wiki)
+[ocr markdown](https://gist.github.com/henrik/1967035)
+[tesseract compiling](https://github.com/tesseract-ocr/tesseract/wiki/Compiling)
+[homebrew tesseract language](https://www.google.com.hk/search?newwindow=1&q=homebrew++tesseract+language&cad=h)
+[/opt.local/lib macports](https://www.google.com.hk/search?newwindow=1&q=%2Fopt%2Flocal%2Flib+macports&cad=h)
+[macports](https://trac.macports.org/wiki/FAQ)
+[Tesseract:安装与命令行使用](http://www.zmonster.me/2015/04/17/tesseract-install-usage.html)
+[浅谈OCR之Tesseract](http://www.cnblogs.com/brooks-dotnet/archive/2010/10/05/1844203.html)
+[Tesseract 怎么用 谷歌搜索](https://www.google.com.hk/search?ie=utf-8&oe=UTF-8&hl=zh-CN&q=Tesseract+%E6%80%8E%E4%B9%88%E7%94%A8&gws_rd=ssl)
+[利用Tesseract图片文字识别初探](https://tonydeng.github.io/2016/07/28/on-the-use-of-tesseract-picture-text-recognition/)
+[图像识别 日期 文字   github](https://www.google.com.hk/search?newwindow=1&c2coff=1&safe=strict&hl=zh-CN&q=%E5%9B%BE%E5%83%8F%E8%AF%86%E5%88%AB+%E6%97%A5%E6%9C%9F+%E6%96%87%E5%AD%97+++github&oq=%E5%9B%BE%E5%83%8F%E8%AF%86%E5%88%AB+%E6%97%A5%E6%9C%9F+%E6%96%87%E5%AD%97+++github&gs_l=serp.3...41815.45626.0.46078.7.7.0.0.0.0.213.992.0j6j1.7.0....0...1c.1j4.64.serp..0.1.135...30i10k1.AFSagTaMses)
+[image++api用于文本分块还是文字识别](http://www.imageplusplus.com/#demo)
