Published with https://stackedit.io/

--- a/文字识别初探.md
+++ b/文字识别初探.md
@@ -8,16 +8,18 @@ tags:
  - 开源
 ---
 
-随着中国互联网对广告的审核越来越严格，日常投放运营过程中，渠道对资质文件和创意的要求越来越高，如营业执照、身份证等。我们需要花费大量的人力成本对这些文件进行描述，如营业主题，姓名，生日等。有没有一种方案对文件进行快速的描述，减少人力成本？
+随着中国互联网对广告的审核越来越严格，日常投放运营过程中，渠道对资质文件和创意的要求越来越高，如营业执照、身份证等。我们需要花费大量的人力成本对这些文件的属性进行文本描述，如营业主题，姓名，生日等。有没有一种方案对文件进行快速的描述，减少人力成本？
 
-另一方面，这个需求是具有可扩展性的。
+另一方面，这个需求是具有可扩展性的。图形学方向上的人工智能是基于图像识别基础上，我们可以先把基础做好，顺便在此基础上把该躺的坑给躺了。
 
+作为一个产品，会先对一些开源的框架以及开放的 API做基本的可行性调研。
+根据google，决定本地使用[Tesseract](https://github.com/tesseract-ocr/tesseract)观察目前OCR（Optical Character Recognition）引擎效果。
 
-因此对一些开源的框架以及开放的   API做基础调研。
+通过homebrew[安装](https://github.com/tesseract-ocr/tesseract#installing-tesseract)
+> brew install tesseract
 
-[Tesseract](https://github.com/tesseract-ocr/tesseract)
-&
-
+由于通过homebrew安装，根据[homebrew文档](http://brew.sh/index_zh-cn.html)，本地地址为：`/usr/local`
+ 
 [tesseract-ocr/langdata](https://github.com/tesseract-ocr/langdata)
 [Chinese OCR](https://blog.philippklaus.de/2011/01/chinese-ocr/)
 [tesseract-ocr/wiki](https://github.com/tesseract-ocr/tesseract/wiki)
@@ -31,4 +33,9 @@ tags:
 [Tesseract 怎么用 谷歌搜索](https://www.google.com.hk/search?ie=utf-8&oe=UTF-8&hl=zh-CN&q=Tesseract+%E6%80%8E%E4%B9%88%E7%94%A8&gws_rd=ssl)
 [利用Tesseract图片文字识别初探](https://tonydeng.github.io/2016/07/28/on-the-use-of-tesseract-picture-text-recognition/)
 [图像识别 日期 文字   github](https://www.google.com.hk/search?newwindow=1&c2coff=1&safe=strict&hl=zh-CN&q=%E5%9B%BE%E5%83%8F%E8%AF%86%E5%88%AB+%E6%97%A5%E6%9C%9F+%E6%96%87%E5%AD%97+++github&oq=%E5%9B%BE%E5%83%8F%E8%AF%86%E5%88%AB+%E6%97%A5%E6%9C%9F+%E6%96%87%E5%AD%97+++github&gs_l=serp.3...41815.45626.0.46078.7.7.0.0.0.0.213.992.0j6j1.7.0....0...1c.1j4.64.serp..0.1.135...30i10k1.AFSagTaMses)
+
+那么我们应该如何对一张图片中的文本作分块呢？
+
 [image++api用于文本分块还是文字识别](http://www.imageplusplus.com/#demo)
+
+[OCR 中文识别用哪种软件识别率比较高？](https://www.zhihu.com/question/19593313)
