--- a/文字识别初探.md
+++ b/文字识别初探.md
@@ -14,6 +14,10 @@ tags:
 
 作为一个产品，会先对一些开源的框架以及开放的 API做基本的可行性调研。
 随手Google之后，决定本地使用[Tesseract](https://github.com/tesseract-ocr/tesseract)观察目前OCR（Optical Character Recognition）引擎效果。
+
+[#reference-浅谈OCR之Tesseract](http://www.cnblogs.com/brooks-dotnet/archive/2010/10/05/1844203.html)
+[#reference-Tesseract:安装与命令行使用](http://www.zmonster.me/2015/04/17/tesseract-install-usage.html)
+
 # 安装
 
 通过homebrew[安装](https://github.com/tesseract-ocr/tesseract#installing-tesseract)到本地`/usr/local/Cellar` [#reference-homebrew](http://brew.sh/index_zh-cn.html)
@@ -28,12 +32,12 @@ tags:
 
 ![直接识别后结果](http://upload-images.jianshu.io/upload_images/544981-7940772e8e5a20c7.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-
-可以看到英文和数字的识别正确率很高，中文识别这么不靠谱？显然不是，不同语言的文字识别机制可能不一样。Google后发现需要指定语言后识别。
-由于我们的目标是中文识别，**必须解决语言包问题**。当然可以自行选择自己愿意安装的语言包，但最方便的是支持所有available的语言包。
+可以看到英文和数字的识别正确率很高，中文识别这么不靠谱？显然不是，不同语言的文字识别机制可能不一样。Google后发现需要指定语言后识别。由于我们的目标是中文识别，**必须解决语言包问题**。当然可以自行选择自己愿意安装的语言包，但最方便的是支持所有available的语言包。
 重新执行`brew install tesseract --all-languages` 安装所有语言包。
-[#reference-Chinese OCR](https://blog.philippklaus.de/2011/01/chinese-ocr/)。
+
+[#reference-Chinese OCR](https://blog.philippklaus.de/2011/01/chinese-ocr/)
 [#reference-利用Tesseract图片文字识别初探](https://tonydeng.github.io/2016/07/28/on-the-use-of-tesseract-picture-text-recognition/)
+[#reference-ocr markdown](https://gist.github.com/henrik/1967035)
 
 现在我们执行`tesseract --list-langs`，可以看到
 > $ tesseract --list-langs
@@ -69,27 +73,17 @@ chi_tra
  
 ## 如何分块
 
+那么我们应该如何对一张图片中的文本作分块呢？简单来说，就是利用[opencv](http://opencv.org)，看出来白色的色块 然后定位做文字识别。
 
-[tesseract-ocr/langdata](https://github.com/tesseract-ocr/langdata)
-[tesseract-ocr/wiki](https://github.com/tesseract-ocr/tesseract/wiki)
-[ocr markdown](https://gist.github.com/henrik/1967035)
-[tesseract compiling](https://github.com/tesseract-ocr/tesseract/wiki/Compiling)
-[homebrew tesseract language](https://www.google.com.hk/search?newwindow=1&q=homebrew++tesseract+language&cad=h)
-[/opt.local/lib macports](https://www.google.com.hk/search?newwindow=1&q=%2Fopt%2Flocal%2Flib+macports&cad=h)
-[macports](https://trac.macports.org/wiki/FAQ)
-[Tesseract:安装与命令行使用](http://www.zmonster.me/2015/04/17/tesseract-install-usage.html)
-[浅谈OCR之Tesseract](http://www.cnblogs.com/brooks-dotnet/archive/2010/10/05/1844203.html)
-[Tesseract 怎么用 谷歌搜索](https://www.google.com.hk/search?ie=utf-8&oe=UTF-8&hl=zh-CN&q=Tesseract+%E6%80%8E%E4%B9%88%E7%94%A8&gws_rd=ssl)
+![Paste_Image.png](http://upload-images.jianshu.io/upload_images/544981-cdddb73f504d1001.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-[图像识别 日期 文字   github](https://www.google.com.hk/search?newwindow=1&c2coff=1&safe=strict&hl=zh-CN&q=%E5%9B%BE%E5%83%8F%E8%AF%86%E5%88%AB+%E6%97%A5%E6%9C%9F+%E6%96%87%E5%AD%97+++github&oq=%E5%9B%BE%E5%83%8F%E8%AF%86%E5%88%AB+%E6%97%A5%E6%9C%9F+%E6%96%87%E5%AD%97+++github&gs_l=serp.3...41815.45626.0.46078.7.7.0.0.0.0.213.992.0j6j1.7.0....0...1c.1j4.64.serp..0.1.135...30i10k1.AFSagTaMses)
+#后续探索
 
-那么我们应该如何对一张图片中的文本作分块呢？
-
-
-
-后续可以进行探索的领域：
+后续可以进行探索的方向：
 
  - [OCR 中文识别用哪种软件识别率比较高？](https://www.zhihu.com/question/19593313)
  - [image++api](http://www.imageplusplus.com/#demo)
- - fenkuai 
- - 判断语言
+ - 如何更合适地对图片的文本区域分块
+ - 根据图片直接判断语言
+
+原文发布于：
