Published with https://stackedit.io/

--- a/计算机网络观测.md
+++ b/计算机网络观测.md
@@ -3,3 +3,53 @@ title: 计算机网络观测
 date: 2016-10-10 08:39:17
 tags:
 ---
+
+利用104.128.92.224进行观测，因为作为一台服务器有独立ip
+
+# NetfilterQueue
+安装NetfilterQueue显示：
+1.  
+
+>unable to execute 'gcc': No such file or directory
+>error: Setup script exited with error: command 'gcc' failed with exit status 1
+
+
+[error: command 'gcc' failed with exit status 1 while installing eventlet](http://stackoverflow.com/questions/11094718/error-command-gcc-failed-with-exit-status-1-while-installing-eventlet)
+
+执行
+>sudo apt-get update
+>sudo apt-get install python-dev 
+
+失败
+
+2.  
+执行
+sudo apt-get install gcc
+
+成功
+
+3.报错
+   netfilterqueue.c:268:42: fatal error: libnfnetlink/linux_nfnetlink.h: No such file or directory
+    compilation terminated.
+    error: command 'gcc' failed with exit status 1
+
+4。 有依赖
+https://pypi.python.org/pypi/NetfilterQueue
+>apt-get install build-essential python-dev libnetfilter-queue-dev
+>pip install NetfilterQueue
+
+done
+
+# dpkt
+pip install dpkt
+
+Done
+
+# Bind-dig
+https://www.isc.org/downloads/bind/
+http://askubuntu.com/questions/25098/how-do-i-install-dig
+http://www.nowtaxes.com.tw/node/1114
+
+
+为了观测被墙情况，使用
+119.29.198.230
