Published with https://stackedit.io/

--- a/计算机网络观测.md
+++ b/计算机网络观测.md
@@ -39,6 +39,11 @@ https://pypi.python.org/pypi/NetfilterQueue
 >pip install NetfilterQueue
 
 done
+# pip
+sudo apt-get python-pip（安装的package有问题？）
+upgrade
+http://www.saltycrane.com/blog/2010/02/how-install-pip-ubuntu/
+https://pip.pypa.io/en/stable/installing/
 
 # dpkt
 pip install dpkt
@@ -52,4 +57,73 @@ http://www.nowtaxes.com.tw/node/1114
 
 
 为了观测被墙情况，使用
-119.29.198.230
+119.29.198.230（腾讯云）
+
+easy_install的目录http://www.cnblogs.com/PandaBamboo/p/3180568.html
+
+## DNS劫持观测
+>$ dig @8.8.8.8 twitter.com
+>
+>; <<>> DiG 9.8.3-P1 <<>> @8.8.8.8 twitter.com
+>; (1 server found)
+>;; global options: +cmd
+>;; Got answer:
+>;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 45740
+>;; flags: qr rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 0, ADDITIONAL: 0
+>
+>;; QUESTION SECTION:
+>;twitter.com.			IN	A
+>
+>;; ANSWER SECTION:
+>twitter.com.		60	IN	A	243.185.187.39
+>
+>;; Query time: 112 msec
+>;; SERVER: 8.8.8.8#53(8.8.8.8)
+>;; WHEN: Sat Oct 15 13:07:17 2016
+>;; MSG SIZE  rcvd: 45
+
+![返回错误IP](http://of2r0f294.bkt.clouddn.com/20161015-%E8%BF%94%E5%9B%9E%E9%94%99%E8%AF%AFIP_ID)
+
+显然，返回的IP地址错误。
+
+## 安装apt-get install ...
+http://askubuntu.com/questions/91815/how-to-install-software-or-upgrade-from-an-old-unsupported-release
+
+sudo 权限下完成
+
+(#4。 有依赖)
+https://pypi.python.org/pypi/NetfilterQueue
+>sudo apt-get install build-essential python-dev libnetfilter-queue-dev
+
+&&
+sudo apt-get install python-pip
+>sudo pip install NetfilterQueue
+>sudo pip install dpkt
+
+#开始观测
+>mkdir computer_network_observe
+>cd computer_network_observe
+
+
+编译错误
+>ImportError: /usr/local/lib/python2.6/dist-packages/netfilterqueue.so: undefined symbol: nfq_set_verdict2
+
+nm命令查看变量定义
+http://linuxtools-rst.readthedocs.io/zh_CN/latest/tool/nm.html
+
+ldd查看库依赖
+http://man.linuxde.net/ldd
+http://tieba.baidu.com/p/315634750
+http://blog.csdn.net/tenfyguo/article/details/5605120
+
+为ubuntu用户获取root权限失败
+http://askubuntu.com/questions/302358/permission-denied-error
+https://www.google.com.hk/search?newwindow=1&c2coff=1&safe=strict&hl=zh-CN&q=+visudo+permission+de&oq=+visudo+permission+de&gs_l=serp.3..0j0i30k1l3j0i8i30k1l3j0i5i30k1l2.290009.295367.0.296570.17.13.0.0.0.0.558.2178.2-3j1j1j1.6.0....0...1c.1.64.serp..11.6.2174...0i13k1j0i7i30k1j0i7i10i30k1j35i39k1.3Yf3P28PMq0
+http://blog.csdn.net/stormbjm/article/details/9086163
+
+
+升级python
+
+[summary](https://github.com/kti/python-netfilterqueue/issues/16)
+...
+放弃了。。。还是明天用canopy到深圳机器看看把。
