Published with https://stackedit.io/

--- a/计算机网络观测.md
+++ b/计算机网络观测.md
@@ -3,64 +3,66 @@ title: 计算机网络观测
 date: 2016-10-10 08:39:17
 tags:
 ---
+[toc]
 
-利用104.128.92.224进行观测，因为作为一台服务器有独立ip
+---
 
-# NetfilterQueue
-安装NetfilterQueue显示：
-1.  
+# Summary
+本文利用104.128.92.224和119.29.198.230进行对比，对计算机网络原理进行观测。他们是独立的Server（VPS），其中，104.128.92.224位于Los Angeles，119.29.198.230位于广州，通过对比确认GFW的特殊价值。本文主要参考http://drops.wooyun.org/papers/10177 ，并对探索过程中遇到的问题做简单记录，遇到问题包括**计算机网络**、**计算机操作系统**、**编译原理**的部分知识。
 
->unable to execute 'gcc': No such file or directory
->error: Setup script exited with error: command 'gcc' failed with exit status 1
+[#reference-104.128.92.224的IP地址](http://ip.cn/index.php?ip=104.128.92.224)
+[#reference-119.29.198.230的IP地址](http://ip.cn/index.php?ip=119.29.198.230)
+ [#reference-【转】翻墙路由器的原理与实现](http://noragithub.github.io/2016/10/06/%E3%80%90%E8%BD%AC%E3%80%91%E7%BF%BB%E5%A2%99%E8%B7%AF%E7%94%B1%E5%99%A8%E7%9A%84%E5%8E%9F%E7%90%86%E4%B8%8E%E5%AE%9E%E7%8E%B0/)
+ #reference- 操作系统的差异
+ [#reference-netfilterqueue文档](https://pypi.python.org/pypi/NetfilterQueue)
 
+# 工具
+## NetfilterQueue
 
-[error: command 'gcc' failed with exit status 1 while installing eventlet](http://stackoverflow.com/questions/11094718/error-command-gcc-failed-with-exit-status-1-while-installing-eventlet)
+我们主要利用[NetfilterQueue](https://github.com/kti/python-netfilterqueue)进行计算机网络的观测，这是Libnetfilter\_queue的python实现，Libnetfilter\_queue是[Netfilter project](http://netfilter.org/projects/libnetfilter_queue/)的一部分。
+Linux下，NetfilterQueue允许用户访问符合iptables规则的IP包。iptables也是Netfilter project的一部分，理解成一张用于保存IP包转发规则的table就好，主要用于防火墙。利用这套规则，计算机可以接受、丢弃，改变（转发）和标记IP包。
 
-执行
->sudo apt-get update
->sudo apt-get install python-dev 
+### 安装
+NetfilterQueue有依赖，不细心的童鞋会走弯路（例如我T_T）
 
-失败
+>sudo apt-get install build-essential python-dev libnetfilter-queue-dev # 系统依赖
+>sudo pip install NetfilterQueue # NetfilterQueue安装
 
-2.  
-执行
-sudo apt-get install gcc
+#### 安装过程中可能遇到的问题
 
-成功
+未安装gcc，无法编译。显示：
 
-3.报错
-   netfilterqueue.c:268:42: fatal error: libnfnetlink/linux_nfnetlink.h: No such file or directory
-    compilation terminated.
-    error: command 'gcc' failed with exit status 1
+```
+unable to execute 'gcc': No such file or directory
+error: Setup script exited with error: command 'gcc' failed with exit status 1
+```
 
-4。 有依赖
-https://pypi.python.org/pypi/NetfilterQueue
->apt-get install build-essential python-dev libnetfilter-queue-dev
->pip install NetfilterQueue
+安装gcc
+>  \$ sudo apt-get install gcc
 
-done
-# pip
-sudo apt-get python-pip（安装的package有问题？）
-upgrade
-http://www.saltycrane.com/blog/2010/02/how-install-pip-ubuntu/
-https://pip.pypa.io/en/stable/installing/
+## pip
+pip是python下包管理工具。主要用于安装和管理python包，和easy\_install类似。
+###  Install& Update& Upgrade
+好像不正确的安装的package有问题。
 
-# dpkt
-pip install dpkt
+>  \$ sudo apt-get python-pip
 
-Done
+[#reference-How to install pip on Ubuntu](http://www.saltycrane.com/blog/2010/02/how-install-pip-ubuntu/)
+[#reference-Doc\_installing](https://pip.pypa.io/en/stable/installing/)
+[#reference-easy\_install进行模块/包管理](http://www.cnblogs.com/PandaBamboo/p/3180568.html)
+[#reference-How to install software or upgrade from an old unsupported release](http://askubuntu.com/questions/91815/how-to-install-software-or-upgrade-from-an-old-unsupported-release)
 
-# Bind-dig
-https://www.isc.org/downloads/bind/
-http://askubuntu.com/questions/25098/how-do-i-install-dig
-http://www.nowtaxes.com.tw/node/1114
+## dpkt
+>  \$ sudo pip install dpkt
 
+## Bind-dig
+dig 命令全称Domain Information Groper，系统自带，观测过程中需要用到的主要命令。
+[#reference-Internet System Consortium-BIND](https://www.isc.org/downloads/bind/)
+[#reference-How do I install dig](http://askubuntu.com/questions/25098/how-do-i-install-dig)
+[#reference-使用 Ubuntu 安裝 Bind9: Domain Name Service (DNS)
+](http://www.nowtaxes.com.tw/node/1114)
 
-为了观测被墙情况，使用
-119.29.198.230（腾讯云）
-
-easy_install的目录http://www.cnblogs.com/PandaBamboo/p/3180568.html
-
+# 计算机网络观测
 ## DNS劫持观测
 >$ dig @8.8.8.8 twitter.com
 >
@@ -93,7 +95,7 @@ sudo 权限下完成
 
 (#4。 有依赖)
 https://pypi.python.org/pypi/NetfilterQueue
->sudo apt-get install build-essential python-dev libnetfilter-queue-dev
+> \$ sudo apt-get install build-essential python-dev libnetfilter-queue-dev
 
 &&
 sudo apt-get install python-pip
@@ -101,10 +103,11 @@ sudo apt-get install python-pip
 >sudo pip install dpkt
 
 #开始观测
+
 >mkdir computer_network_observe
->cd computer_network_observe
+>cd computer\_network\_observe
 
-
+# 操作系统&编译原理
 编译错误
 >ImportError: /usr/local/lib/python2.6/dist-packages/netfilterqueue.so: undefined symbol: nfq_set_verdict2
 
@@ -122,8 +125,13 @@ https://www.google.com.hk/search?newwindow=1&c2coff=1&safe=strict&hl=zh-CN&q=+vi
 http://blog.csdn.net/stormbjm/article/details/9086163
 
 
-升级python
+
 
 [summary](https://github.com/kti/python-netfilterqueue/issues/16)
 ...
 放弃了。。。还是明天用canopy到深圳机器看看把。
+
+
+以上无用功
+
+升级内核libnetfilter版本
