Published with https://stackedit.io/

--- a/计算机网络观测.md
+++ b/计算机网络观测.md
@@ -108,30 +108,65 @@ sudo apt-get install python-pip
 >cd computer\_network\_observe
 
 # 操作系统&编译原理
-编译错误
->ImportError: /usr/local/lib/python2.6/dist-packages/netfilterqueue.so: undefined symbol: nfq_set_verdict2
+`from netfilterqueue import NetfilterQueue`遇到编译错误
+`ImportError: /usr/local/lib/python2.6/dist-packages/netfilterqueue.so: undefined symbol: nfq_set_verdict2`
+详细错误信息：
+- [ImportError: /usr/local/lib/python2.6/dist-packages/netfilterqueue.so: undefined symbol: nfq_set_verdict2 #16](https://github.com/kti/python-netfilterqueue/issues/16)
+- [netfilterqueue importing makes compile error](http://stackoverflow.com/questions/40229918/netfilterqueue-importing-makes-compile-error)
 
-nm命令查看变量定义
-http://linuxtools-rst.readthedocs.io/zh_CN/latest/tool/nm.html
+[#reference-nm 目标文件格式分析](http://linuxtools-rst.readthedocs.io/zh_CN/latest/tool/nm.html)
+[#reference-ldd ldd命令](http://man.linuxde.net/ldd]http://man.linuxde.net/ldd)
+[#reference-Linux Shell脚本Ldd命令原理使用方法](http://tieba.baidu.com/p/315634750)
+[#reference-浅析ldd命令](http://blog.csdn.net/tenfyguo/article/details/5605120)
 
-ldd查看库依赖
-http://man.linuxde.net/ldd
-http://tieba.baidu.com/p/315634750
-http://blog.csdn.net/tenfyguo/article/details/5605120
+网络上并没有现成的信息解决该问题，简单记录下解决该问题的详细思路。
+问题的是`netfilterqueue.so`有未定义的符号` nfq_set_verdict2`，而`.so`文件是编译的中间过程文件，
 
-为ubuntu用户获取root权限失败
-http://askubuntu.com/questions/302358/permission-denied-error
-https://www.google.com.hk/search?newwindow=1&c2coff=1&safe=strict&hl=zh-CN&q=+visudo+permission+de&oq=+visudo+permission+de&gs_l=serp.3..0j0i30k1l3j0i8i30k1l3j0i5i30k1l2.290009.295367.0.296570.17.13.0.0.0.0.558.2178.2-3j1j1j1.6.0....0...1c.1.64.serp..11.6.2174...0i13k1j0i7i30k1j0i7i10i30k1j35i39k1.3Yf3P28PMq0
-http://blog.csdn.net/stormbjm/article/details/9086163
+链接可在编译（compile-time）、加载（load-time）或运行（run-time）时执行。
+
+顺序：
+语言预处理器-->编译器-->汇编器-->链接器
+
+##静态链接
+输入：可重定位的目标文件（object file），命令行参数
+输出：可执行的目标文件
+
+> 输入的可重定位目标文件由各种不同的代码和数据节（section）组成。指令在一个节中，初始化的全局变量在另一个节中，而未初始化的变量又在另外一个节中。
+
+.pyx-->.c-->.o/.so
 
 
 
-
-[summary](https://github.com/kti/python-netfilterqueue/issues/16)
-...
-放弃了。。。还是明天用canopy到深圳机器看看把。
-
-
-以上无用功
 
 升级内核libnetfilter版本
+
+
+### Ubuntu，搬瓦工机器有问题
+pip update后，安装netfilterqueue成功，发现和root权限有根本性的差异。
+打算重新sudo pip install netfilterqueue 先运行计算机观测。（从安装pip开始）
+ 问题相信信息：
+ [#reference-NetfilterQueue tiped “are you root ” ,which I was already the “root”](http://stackoverflow.com/questions/40231588/netfilterqueue-tiped-are-you-root-which-i-was-already-the-root)
+证据
+> sudo which python
+/usr/bin/python
+> which python
+/root/canopy/bin/python
+
+ 结果两个都问了，are you root.
+ 这就很尴尬了。
+
+import os
+if os.geteuid() != 0:
+    print "This program must be run as root. Aborting."
+    sys.exit(1)
+
+证明我已经是root。
+
+ cd /temp
+尝试重新安装所有依赖，并改目标目录。
+失败。
+
+Linux 下用户权限设置
+[#reference-permission denied error](http://askubuntu.com/questions/302358/permission-denied-error)
+https://www.google.com.hk/search?newwindow=1&c2coff=1&safe=strict&hl=zh-CN&q=+visudo+permission+de&oq=+visudo+permission+de&gs_l=serp.3..0j0i30k1l3j0i8i30k1l3j0i5i30k1l2.290009.295367.0.296570.17.13.0.0.0.0.558.2178.2-3j1j1j1.6.0....0...1c.1.64.serp..11.6.2174...0i13k1j0i7i30k1j0i7i10i30k1j35i39k1.3Yf3P28PMq0
+[#reference-linux下添加用户并赋予root权限](http://blog.csdn.net/stormbjm/article/details/9086163)
