--- a/计算机网络观测.md
+++ b/计算机网络观测.md
@@ -8,12 +8,13 @@ tags:
 ---
 
 # Summary
-本文利用104.128.92.224和119.29.198.230进行对比，对计算机网络原理进行观测。他们是独立的Server（VPS），其中，104.128.92.224位于Los Angeles，119.29.198.230位于广州，通过对比确认GFW的特殊价值。本文主要参考http://drops.wooyun.org/papers/10177 ，并对探索过程中遇到的问题做简单记录，遇到问题包括**计算机网络**、**计算机操作系统**、**编译原理**的部分知识。
+`104.128.92.224`和`119.29.198.230`是两台独立服务器（VPS），其中，`104.128.92.224`位于Los Angeles，`119.29.198.230`位于广州。通过对它们的网络行为进行监控，对比他们收取到回复的差异，确认GFW的特殊价值并探索计算机应用层协议的原理与细节。（本文以`LA服务器`和`广州服务器`分别指代）
+本文主要参考[翻墙路由器的原理与实现](http://drops.wooyun.org/papers/10177)，并对探索过程中遇到的问题做简单记录，遇到问题涉及**计算机网络**、**计算机操作系统**、**编译原理**的部分知识。
 
 [#reference-104.128.92.224的IP地址](http://ip.cn/index.php?ip=104.128.92.224)
 [#reference-119.29.198.230的IP地址](http://ip.cn/index.php?ip=119.29.198.230)
  [#reference-【转】翻墙路由器的原理与实现](http://noragithub.github.io/2016/10/06/%E3%80%90%E8%BD%AC%E3%80%91%E7%BF%BB%E5%A2%99%E8%B7%AF%E7%94%B1%E5%99%A8%E7%9A%84%E5%8E%9F%E7%90%86%E4%B8%8E%E5%AE%9E%E7%8E%B0/)
- #reference- 操作系统的差异
+ #reference- 操作系统的差异，Ubuntu
  [#reference-netfilterqueue文档](https://pypi.python.org/pypi/NetfilterQueue)
 
 # 工具
@@ -43,7 +44,7 @@ error: Setup script exited with error: command 'gcc' failed with exit status 1
 ## pip
 pip是python下包管理工具。主要用于安装和管理python包，和easy\_install类似。
 ###  Install& Update& Upgrade
-好像不正确的安装的package有问题。
+不正确地安装会有问题。
 
 >  \$ sudo apt-get python-pip
 
@@ -64,6 +65,7 @@ dig 命令全称Domain Information Groper，系统自带，观测过程中需要
 
 # 计算机网络观测
 ## DNS劫持观测
+广州服务器：
 >$ dig @8.8.8.8 twitter.com
 >
 >; <<>> DiG 9.8.3-P1 <<>> @8.8.8.8 twitter.com
@@ -86,6 +88,25 @@ dig 命令全称Domain Information Groper，系统自带，观测过程中需要
 
 ![返回错误IP](http://of2r0f294.bkt.clouddn.com/20161015-%E8%BF%94%E5%9B%9E%E9%94%99%E8%AF%AFIP_ID)
 
+; <<>> DiG 9.10.3-P4-Ubuntu <<>> @8.8.8.8 twitter
+; (1 server found)
+;; global options: +cmd
+;; Got answer:
+;; ->>HEADER<<- opcode: QUERY, status: NXDOMAIN, id: 55863
+;; flags: qr rd ra ad; QUERY: 1, ANSWER: 0, AUTHORITY: 1, ADDITIONAL: 1
+
+;; OPT PSEUDOSECTION:
+; EDNS: version: 0, flags:; udp: 512
+;; QUESTION SECTION:
+;twitter.			IN	A
+
+;; AUTHORITY SECTION:
+.			81741	IN	SOA	a.root-servers.net. nstld.verisign-grs.com. 2016110901 1800 900 604800 86400
+
+;; Query time: 25 msec
+;; SERVER: 8.8.8.8#53(8.8.8.8)
+;; WHEN: Wed Nov 09 21:01:40 EST 2016
+;; MSG SIZE  rcvd: 111
 显然，返回的IP地址错误。
 
 ## 安装apt-get install ...
@@ -108,6 +129,7 @@ sudo apt-get install python-pip
 >cd computer\_network\_observe
 
 # 操作系统&编译原理
+
 `from netfilterqueue import NetfilterQueue`遇到编译错误
 `ImportError: /usr/local/lib/python2.6/dist-packages/netfilterqueue.so: undefined symbol: nfq_set_verdict2`
 详细错误信息：
@@ -123,9 +145,24 @@ sudo apt-get install python-pip
 问题的是`netfilterqueue.so`有未定义的符号` nfq_set_verdict2`，而`.so`文件是编译的中间过程文件，
 
 链接可在编译（compile-time）、加载（load-time）或运行（run-time）时执行。
-
 顺序：
-语言预处理器-->编译器-->汇编器-->链接器
+```flow
+CPP=>operation: 语言预处理器
+CCL=>operation: 编译器
+AS=>operation: 汇编器
+LD=>operation: 链接器
+
+CPP(right)->CCL(right)->AS(right)->LD
+```
+标准的编译过程是基于脚本时利用cpp撰写的：
+![代码编译过程分为编译和链接两个过程](http://of2r0f294.bkt.clouddn.com/20161107-%E4%BB%A3%E7%A0%81%E7%BC%96%E8%AF%91%E8%BF%87%E7%A8%8B%E5%88%86%E4%B8%BA%E7%BC%96%E8%AF%91%E5%92%8C%E9%93%BE%E6%8E%A5%E4%B8%A4%E4%B8%AA%E8%BF%87%E7%A8%8B_ID)
+![编译过程与文件](http://of2r0f294.bkt.clouddn.com/20161107-%E7%BC%96%E8%AF%91%E8%BF%87%E7%A8%8B%E4%B8%8E%E6%96%87%E4%BB%B6_ID)
+![编译过程](http://of2r0f294.bkt.clouddn.com/20161107-%E7%BC%96%E8%AF%91%E8%BF%87%E7%A8%8B_ID)
+[#reference-C语言的编译链接过程详解](http://7905648.blog.51cto.com/7895648/1297255#0-tsina-1-7558-397232819ff9a47a7b7e80a40613cfe1)
+[#reference-从源代码到可执行文件全过程](http://lxwei.github.io/posts/262.html)
+当脚本来自python：
+可以利用python库，通过".pyx"文件生成c，最后编译为机器码（二进制）
+Python[Cython应用手记](http://gashero.iteye.com/blog/649516)
 
 ##静态链接
 输入：可重定位的目标文件（object file），命令行参数
@@ -136,12 +173,68 @@ sudo apt-get install python-pip
 .pyx-->.c-->.o/.so
 
 
+我们查看[NetfilterQueue](https://github.com/kti/python-netfilterqueue)的文件和步骤发现，".c",".pxd",".pyx"主要用于编译NetfilterQueue，因此问题应该主要来自对系统的依赖文件。
+对系统的依赖主要是这些：
+
+>NetfilterQueue is a C extention module that links against libnetfilter_queue. Before installing, ensure you have:
+
+>- A C compiler
+>- Python development files
+>- Libnetfilter_queue development files and associated dependencies
+
+>On Debian or Ubuntu, install these files with:
+
+>`apt-get install build-essential python-dev libnetfilter-queue-dev`
+
+由于.c是由.pyx生成的，.pxd定义了函数模版 
+查看[.pyx](https://github.com/kti/python-netfilterqueue/blob/master/netfilterqueue.pyx) 文件中可以发现`nfq_set_verdict2`从未被定义，即，它主要来自其它头文件（.h）的include，[.pxd](https://github.com/kti/python-netfilterqueue/blob/master/netfilterqueue.pxd)
+ 发现该变量来自`cdef extern from "libnetfilter_queue/libnetfilter_queue.h":`
+
+怀疑是由于是开源项目，内核版本的升级过程也将一些类库升级，却不能向前兼容。于是，升级内核libnetfilter_queue版本。
+参考[libnefilter-queue起步走](http://chyeh.logdown.com/posts/91924-libnefilter-queueqi-bu-zou)，下载最新的对应项目
+
+ - libmnl-1.0.4
+ - libnetfilter_queue-1.0.2
+ - libnfnetlink-1.0.1
 
 
-升级内核libnetfilter版本
+下载相关项目：
+> \$ wget http://netfilter.org/projects/libmnl/files/libmnl-1.0.4.tar.bz2
+> \$ wget http://netfilter.org/projects/libnetfilter_queue/files/libnetfilter_queue-1.0.2.tar.bz2
+> \$  wget http://netfilter.org/projects/libnfnetlink/files/libnfnetlink-1.0.1.tar.bz2
 
 
-### Ubuntu，搬瓦工机器有问题
+按顺序执行安装
+
+ - libmnl-1.0.4
+> \$ tar -jxvf libmnl-1.0.4.tar.bz2 
+> \$ cd libmnl-1.0.4/
+> \$  ./configure
+> \$  make
+> \$  sudo make install  
+
+ - libnetfilter_queue-1.0.2
+> \$ tar -jxvf libnetfilter_queue-1.0.2.tar.bz2 
+> \$ cd libnetfilter_queue-1.0.2/
+> \$  ./configure
+> \$  make
+> \$  sudo make install  
+
+ - libnfnetlink-1.0.1
+> \$ tar -jxvf libnfnetlink-1.0.1.tar.bz2 
+> \$ cd libnfnetlink-1.0.1/
+> \$  ./configure
+> \$  make
+> \$  sudo make install  
+
+安装完依旧是不生效的。那么计算机是如何找到这个运行时的文件夹就很关键了。
+参考[libnetfilter_queue setup(安装向导)](http://www.voidcn.com/blog/tqtuuuu/article/p-3700026.html)和[编译中接触到 pkg config](http://blog.sina.com.cn/s/blog_4b3bae23010081fg.html)
+在 `/etc/ld.so.conf` 文件中添加库的搜索路径`/usr/local`，并执行`/sbin/ldconfig` 命令。
+
+[#reference-linux各文件夹的作用](www.cnblogs.com/amboyna/archive/2008/02/16/1070474.html)
+执行成功。
+
+### 搬瓦工机器有问题
 pip update后，安装netfilterqueue成功，发现和root权限有根本性的差异。
 打算重新sudo pip install netfilterqueue 先运行计算机观测。（从安装pip开始）
  问题相信信息：
@@ -170,3 +263,9 @@ Linux 下用户权限设置
 [#reference-permission denied error](http://askubuntu.com/questions/302358/permission-denied-error)
 https://www.google.com.hk/search?newwindow=1&c2coff=1&safe=strict&hl=zh-CN&q=+visudo+permission+de&oq=+visudo+permission+de&gs_l=serp.3..0j0i30k1l3j0i8i30k1l3j0i5i30k1l2.290009.295367.0.296570.17.13.0.0.0.0.558.2178.2-3j1j1j1.6.0....0...1c.1.64.serp..11.6.2174...0i13k1j0i7i30k1j0i7i10i30k1j35i39k1.3Yf3P28PMq0
 [#reference-linux下添加用户并赋予root权限](http://blog.csdn.net/stormbjm/article/details/9086163)
+
+
+```python
+import sql
+print 'f'
+```
