Published with https://stackedit.io/

--- a/计算机网络观测.md
+++ b/计算机网络观测.md
@@ -3,13 +3,10 @@ title: 计算机网络观测
 date: 2016-10-10 08:39:17
 tags:
 ---
-[toc]
-
----
 
 # Summary
 `104.128.92.224`和`119.29.198.230`是两台独立服务器（VPS），其中，`104.128.92.224`位于Los Angeles，`119.29.198.230`位于广州。通过对它们的网络行为进行监控，对比他们收取到回复的差异，确认GFW的特殊价值并探索计算机应用层协议的原理与细节。（本文以`LA服务器`和`广州服务器`分别指代）
-本文主要参考[翻墙路由器的原理与实现](http://drops.wooyun.org/papers/10177)，并对探索过程中遇到的问题做简单记录，遇到问题涉及**计算机网络**、**计算机操作系统**、**编译原理**的部分知识。
+本文主要参考[翻墙路由器的原理与实现](http://drops.wooyun.org/papers/10177)来探索**计算机网络**（主要是应用层），并对探索过程中遇到的问题做简单记录，遇到问题涉及**计算机操作系统**、**编译原理**的部分知识。
 
 [#reference-104.128.92.224的IP地址](http://ip.cn/index.php?ip=104.128.92.224)
 [#reference-119.29.198.230的IP地址](http://ip.cn/index.php?ip=119.29.198.230)
@@ -22,6 +19,13 @@ tags:
 
 我们主要利用[NetfilterQueue](https://github.com/kti/python-netfilterqueue)进行计算机网络的观测，这是Libnetfilter\_queue的python实现，Libnetfilter\_queue是[Netfilter project](http://netfilter.org/projects/libnetfilter_queue/)的一部分。
 Linux下，NetfilterQueue允许用户访问符合iptables规则的IP包。iptables也是Netfilter project的一部分，理解成一张用于保存IP包转发规则的table就好，主要用于防火墙。利用这套规则，计算机可以接受、丢弃，改变（转发）和标记IP包。
+
+###升级apt-get
+更新资源并升级：
+
+> \$ sudo apt-get update && sudo apt-get upgrad
+
+http://blog.csdn.net/ai_net/article/details/7710324
 
 ### 安装
 NetfilterQueue有依赖，不细心的童鞋会走弯路（例如我T_T）
@@ -46,7 +50,7 @@ pip是python下包管理工具。主要用于安装和管理python包，和easy\
 ###  Install& Update& Upgrade
 不正确地安装会有问题。
 
->  \$ sudo apt-get python-pip
+>  \$ sudo apt-get install python-pip
 
 [#reference-How to install pip on Ubuntu](http://www.saltycrane.com/blog/2010/02/how-install-pip-ubuntu/)
 [#reference-Doc\_installing](https://pip.pypa.io/en/stable/installing/)
@@ -128,11 +132,16 @@ sudo apt-get install python-pip
 >mkdir computer_network_observe
 >cd computer\_network\_observe
 
-# 操作系统&编译原理
+# 遇到的问题
 
-`from netfilterqueue import NetfilterQueue`遇到编译错误
-`ImportError: /usr/local/lib/python2.6/dist-packages/netfilterqueue.so: undefined symbol: nfq_set_verdict2`
-详细错误信息：
+ 操作系统&编译原理
+
+执行`from netfilterqueue import NetfilterQueue`遇到编译错误
+```
+ImportError: /usr/local/lib/python2.6/dist-packages/netfilterqueue.so: undefined symbol: nfq_set_verdict2
+```
+网络上并没有现成的信息解决该问题，简单记录下解决该问题的详细思路。
+\#reference-详细错误信息：
 - [ImportError: /usr/local/lib/python2.6/dist-packages/netfilterqueue.so: undefined symbol: nfq_set_verdict2 #16](https://github.com/kti/python-netfilterqueue/issues/16)
 - [netfilterqueue importing makes compile error](http://stackoverflow.com/questions/40229918/netfilterqueue-importing-makes-compile-error)
 
@@ -141,8 +150,8 @@ sudo apt-get install python-pip
 [#reference-Linux Shell脚本Ldd命令原理使用方法](http://tieba.baidu.com/p/315634750)
 [#reference-浅析ldd命令](http://blog.csdn.net/tenfyguo/article/details/5605120)
 
-网络上并没有现成的信息解决该问题，简单记录下解决该问题的详细思路。
-问题的是`netfilterqueue.so`有未定义的符号` nfq_set_verdict2`，而`.so`文件是编译的中间过程文件，
+## 定义问题
+尝试理解错误信息，问题的是`netfilterqueue.so`有未定义的符号` nfq_set_verdict2`，而`.so`文件是编译的中间过程文件。`so` stands for `shared object`。
 
 链接可在编译（compile-time）、加载（load-time）或运行（run-time）时执行。
 顺序：
@@ -170,8 +179,16 @@ Python[Cython应用手记](http://gashero.iteye.com/blog/649516)
 
 > 输入的可重定位目标文件由各种不同的代码和数据节（section）组成。指令在一个节中，初始化的全局变量在另一个节中，而未初始化的变量又在另外一个节中。
 
-.pyx-->.c-->.o/.so
 
+```flow
+pyx=>operation: .pyx
+C=>operation: .c
+o=>operation: .o
+so=>operation: .so
+
+pyx(right)->C(right)->o(right)
+pyx(right)->C(right)->so(right)
+```
 
 我们查看[NetfilterQueue](https://github.com/kti/python-netfilterqueue)的文件和步骤发现，".c",".pxd",".pyx"主要用于编译NetfilterQueue，因此问题应该主要来自对系统的依赖文件。
 对系统的依赖主要是这些：
@@ -265,7 +282,11 @@ https://www.google.com.hk/search?newwindow=1&c2coff=1&safe=strict&hl=zh-CN&q=+vi
 [#reference-linux下添加用户并赋予root权限](http://blog.csdn.net/stormbjm/article/details/9086163)
 
 
+脚本
 ```python
 import sql
 print 'f'
 ```
+
+#思考
+其实我目前遇到的问题都是范运维问题，能否通过docker容器解决呢？如果解决是否有机会产品经理学习计算机知识的市场呢？其实还蛮有趣的。
