Published with https://stackedit.io/

--- a/【转】翻墙路由器的原理与实现.md
+++ b/【转】翻墙路由器的原理与实现.md
@@ -297,7 +297,7 @@ OpenWRT提供了NetfilterQueue的C的库。但是使用C来做实验太笨重了
 ### 安装Python的dpkt
 能够抓取和发送IP包之后，第二个头疼的问题是如何解析和构造任意的IP包。Python有一个库叫dpkt可以帮我们很好地完成这项任务。这是我们选择Python做实验的第二个重要理由。
 
-在路由器上直接下载http://dpkt.googlecode.com/files/dpkt-1.7.tar.gz，然后解压缩，拷贝其中的dpkt目录到/usr/lib/python2.7/site-packages下。
+在路由器上直接下载http://dpkt.googlecode.com/files/dpkt-1.7.tar.gz ，然后解压缩，拷贝其中的dpkt目录到/usr/lib/python2.7/site-packages下。
 
 ## DNS劫持观测
 我们要做的第一个实验是用python代码观测到DNS劫持的全过程。
@@ -325,12 +325,12 @@ dig是DNS的客户端，可以很方便地构造出我们想要的DNS请求。`d
 可以很清楚地看到我们得到的错误答案59.24.3.173。
 
 ### 抓包观测
-使用iptables我们可以让特定的IP包经过应用层的代码，从而使得我们用python观测DNS查询过程提供了可能。代码如下，保存文件名[dns_hijacking_obversation.py](https://gist.github.com/4524294)：
+使用iptables我们可以让特定的IP包经过应用层的代码，从而使得我们用python观测DNS查询过程提供了可能。代码如下，保存文件名[dns\_hijacking\_obversation.py](https://gist.github.com/4524294)：
 
 ```
 from netfilterqueue import NetfilterQueue
 import subprocess
-import signal   
+import signal
 def observe_dns_hijacking(nfqueue_element):
    print('packet past through me')
    nfqueue_element.accept()   
