commit local update

--- a/【转】翻墙路由器的原理与实现.md
+++ b/【转】翻墙路由器的原理与实现.md
@@ -16,6 +16,8 @@ tags:
 
 GFW具有重大的社会意义。无论是正面的社会意义，还是负面的意义。无论你是讨厌，还是憎恨。它都在那里。在可以预见的将来，墙还会继续存在。我们要学会如何与其共存。我是一个死搞技术的，就是打算搞技术到死的那种人。当我读到[西厢计划](http://gfwrev.blogspot.jp/2010/03/blog-post.html)的博客上的这么一段话时，我被深深的触动了。不是为了什么政治目的，不是为了什么远大理想，仅仅做为一个死搞技术的人显摆自己的价值，我也必须做些什么。博客上的原话是这么写的：
 
+<!-- more -->
+
 >作为个搞技术的人，我们要干点疯狂的事。如果我们不动手，我们就要被比我们差的远的坏技术人员欺负。这太丢人了。眼前就是，GFW这个东西，之前是我们不抱团，让它猖狂了。现在咱们得凑一起，想出来一个办法让它郁闷一下，不能老被欺负吧。要不，等到未来，后代会嘲笑我们这些没用的家伙，就象我们说别人“你怎么不反抗？”
 
 ![](http://static.wooyun.org//drops/20151117/2015111702570978132.jpg)
@@ -325,7 +327,7 @@ dig是DNS的客户端，可以很方便地构造出我们想要的DNS请求。`d
 可以很清楚地看到我们得到的错误答案59.24.3.173。
 
 ### 抓包观测
-使用iptables我们可以让特定的IP包经过应用层的代码，从而使得我们用python观测DNS查询过程提供了可能。代码如下，保存文件名[dns_hijacking_obversation.py](https://gist.github.com/4524294)：
+使用iptables我们可以让特定的IP包经过应用层的代码，从而使得我们用python观测DNS查询过程提供了可能。代码如下，保存文件名[dns_hijacking_observation.py](https://gist.github.com/4524294)：
 
 ```
 from netfilterqueue import NetfilterQueue
