--- a/计算机网络观测.md
+++ b/计算机网络观测.md
@@ -2,9 +2,12 @@
 title: 计算机网络观测
 date: 2016-10-10 08:39:17
 tags:
+layout: draft
 ---
 
 利用104.128.92.224进行观测，因为作为一台服务器有独立ip
+
+<!-- more -->
 
 # NetfilterQueue
 安装NetfilterQueue显示：
