--- a/项目介绍.md
+++ b/项目介绍.md
@@ -2,16 +2,20 @@
 title: 项目介绍
 date: 2016-07-30 15:30:06
 tags:
+type: about
 ---
+Brief of Each Project
+
+<!-- more -->
 
 ## BES_AMS服务对接
-主流的人群标签以及第三方数据主要是基于访客的浏览数据进行建模，对于toB类广告主，**这类人群标签显然不够精准**。BES是百度最大的ADX。AMS服务是百度关键词服务，通过API返回固定数量关键词对应的搜索人群（cookie），用于RTB过程中的(re)targeting。
+主流的人群标签以及第三方数据主要是基于访客的浏览数据进行建模，对于toB类广告主，**这类人群标签显然不够精准**。BES是百度最大的ADX。AMS（Audience Matching Service）服务是百度关键词服务，通过API返回固定数量关键词对应的搜索人群（cookie），用于RTB过程中的(re)targeting。
 
 ## The_Media_Trust对接
 进行海外投放过程中，像Imobi/Google/Mopub/Pubmatic渠道，有严格的创意&政策要求。The Media Trust是保证创意、落地页无恶意代码以及政策违反的第三方服务机构，通过定时轮询，**保证投放免受政策惩罚**。
 
-## Peer_99/ADbug_brandsafety（品牌安全）对接
-品牌类广告主对于品牌美誉度有要求，要求广告位所在的页面不影响品牌调性。国内机房竞价前请求海外服务器page级别的数据，判断是否危害广告主品牌安全。**用于保护品牌类广告主广告调性**。
+## Peer_39/ADbug_brandsafety（品牌安全）对接
+品牌类广告主对于品牌美誉度有要求，要求广告位所在的页面不影响品牌调性。brandsafety指的正是这一类ad verification服务。Peer 39/ADbug是国内外brandsafety服务最出名的。北京机房竞价前请求（国内/海外）服务器page级别的属性数据，判断是否危害广告主品牌安全。**用于保护品牌类广告主广告调性**
 
 ## Sizmek_ad_serving对接
 Sizmek为4A提供广告投放服务，包括brandsafety（品牌安全）／viewability（可视率）监测。**通过对接，保证创意、落地页和竞价服务（DSP端、渠道端）相互兼容**。
