--- a/文字识别初探.md
+++ b/文字识别初探.md
@@ -8,7 +8,10 @@ tags:
  - 开源
 ---
 
+![统计代码](http://nojsstats.appspot.com/UA-47491561-2/www.jianshu.com/p/e96a8f303d69)
 随着中国互联网对广告的审核越来越严格，日常投放运营过程中，渠道对资质文件和创意的要求越来越高，如营业执照、身份证等。我们需要花费大量的人力成本对这些文件的属性进行文本描述，如营业主题，姓名，生日等。有没有一种方案对文件进行快速的描述，减少人力成本？
+
+<!-- more -->
 
 另一方面，这个需求是具有可扩展性的。图形学方向上的人工智能，是建立在图像识别基础上。计算广告日后必然和图形学和人工智能强关联，正好探索这个方向的可行性，并把该躺的坑给躺一遍。
 
