--- a/文字识别初探.md
+++ b/文字识别初探.md
@@ -89,4 +89,4 @@ chi_tra
  - 如何更合适地对图片的文本区域分块
  - 根据图片直接判断语言
 
-原文发布于：[文字识别初探](http://noragithub.github.io/2016/10/08/%E6%96%87%E5%AD%97%E8%AF%86%E5%88%AB%E5%88%9D%E6%8E%A2/)
+原文发布于：[文字识别初探](/2016/10/08/%E6%96%87%E5%AD%97%E8%AF%86%E5%88%AB%E5%88%9D%E6%8E%A2/)
