--- a/计算机网络观测.md
+++ b/计算机网络观测.md
@@ -15,7 +15,7 @@ layout: draft
 
 [#reference-104.128.92.224的IP地址](http://ip.cn/index.php?ip=104.128.92.224)
 [#reference-119.29.198.230的IP地址](http://ip.cn/index.php?ip=119.29.198.230)
- [#reference-【转】翻墙路由器的原理与实现](http://noragithub.github.io/2016/10/06/%E3%80%90%E8%BD%AC%E3%80%91%E7%BF%BB%E5%A2%99%E8%B7%AF%E7%94%B1%E5%99%A8%E7%9A%84%E5%8E%9F%E7%90%86%E4%B8%8E%E5%AE%9E%E7%8E%B0/)
+ [#reference-【转】翻墙路由器的原理与实现](/2016/10/06/%E3%80%90%E8%BD%AC%E3%80%91%E7%BF%BB%E5%A2%99%E8%B7%AF%E7%94%B1%E5%99%A8%E7%9A%84%E5%8E%9F%E7%90%86%E4%B8%8E%E5%AE%9E%E7%8E%B0/)
  #reference- 操作系统的差异，Ubuntu
  [#reference-netfilterqueue文档](https://pypi.python.org/pypi/NetfilterQueue)
 
